--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "movies.registerTempTable(\"movies\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +435,7 @@
        " Row(movie_id=u'10', name=u'GoldenEye (1995)', tags=[u'Action', u'Adventure', u'Thriller'])]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,36 +446,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-5aa2222824a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"movie\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'movies' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "training_writer(movies, \"movie\")"
+    "writer(movies, \"movie\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+--------------------+\n",
+      "|movie_id|            name|                tags|\n",
+      "+--------+----------------+--------------------+\n",
+      "|       1|Toy Story (1995)|ArrayBuffer(Adven...|\n",
+      "+--------+----------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql.sql(\"SELECT * from movies where movie_id=1\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------------------+--------------------+\n",
+      "|movie_id|               name|                tags|\n",
+      "+--------+-------------------+--------------------+\n",
+      "|       1|   Toy Story (1995)|ArrayBuffer(Adven...|\n",
+      "|    2253|        Toys (1992)|ArrayBuffer(Actio...|\n",
+      "|    3114| Toy Story 2 (1999)|ArrayBuffer(Adven...|\n",
+      "|    4929|    Toy, The (1982)| ArrayBuffer(Comedy)|\n",
+      "|    5843|Toy Soldiers (1991)|ArrayBuffer(Actio...|\n",
+      "+--------+-------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql.sql(\"select * from movies where name like 'Toy%'\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------------------+--------------------+\n",
+      "|movie_id|                name|                tags|\n",
+      "+--------+--------------------+--------------------+\n",
+      "|     610|  Heavy Metal (1981)|ArrayBuffer(Actio...|\n",
+      "|     681|Clean Slate (Coup...|  ArrayBuffer(Crime)|\n",
+      "|    1033|Fox and the Hound...|ArrayBuffer(Anima...|\n",
+      "|    1124|On Golden Pond (1...|  ArrayBuffer(Drama)|\n",
+      "|    1129|Escape from New Y...|ArrayBuffer(Actio...|\n",
+      "|    1198|Raiders of the Lo...|ArrayBuffer(Actio...|\n",
+      "|    1233|Boat, The (Das Bo...|ArrayBuffer(Actio...|\n",
+      "|    1264|         Diva (1981)|ArrayBuffer(Actio...|\n",
+      "|    1321|American Werewolf...|ArrayBuffer(Comed...|\n",
+      "|    1335|  Blood Beach (1981)|ArrayBuffer(Actio...|\n",
+      "|    1663|      Stripes (1981)|ArrayBuffer(Comed...|\n",
+      "|    1957|Chariots of Fire ...|  ArrayBuffer(Drama)|\n",
+      "|    1975|Friday the 13th P...| ArrayBuffer(Horror)|\n",
+      "|    1983| Halloween II (1981)| ArrayBuffer(Horror)|\n",
+      "|    2041|    Condorman (1981)|ArrayBuffer(Actio...|\n",
+      "|    2044|Devil and Max Dev...|ArrayBuffer(Comed...|\n",
+      "|    2075|     Mephisto (1981)|ArrayBuffer(Drama...|\n",
+      "|    2254|      Choices (1981)|  ArrayBuffer(Drama)|\n",
+      "|    2301|History of the Wo...|ArrayBuffer(Comed...|\n",
+      "|    2639|Mommie Dearest (1...|  ArrayBuffer(Drama)|\n",
+      "+--------+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql.sql(\"select * from movies where name like '%(1981)'\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# UserID::MovieID::Rating::Timestamp\n",
-    "ratings = sc.textFile(\"ml-10M100K/ratings.dat\").map(lambda x: x.split(\"::\") )"
+    "ratings_rdd = sc.textFile(\"ml-10M100K/ratings.dat\").map(lambda x: x.split(\"::\") )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-408a1d7ba92d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mratings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mratings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"user_id\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"movie_id\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rating\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"timestamp\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ratings' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df = ratings.toDF([\"user_id\", \"movie_id\", \"rating\", \"timestamp\"])"
+    "ratings = ratings.toDF([\"user_id\", \"movie_id\", \"rating\", \"timestamp\"])"
    ]
   },
   {
@@ -481,14 +611,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-9b9204c49045>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mratings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rating_by_movie\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ratings' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "training_writer(ratings, \"rating_by_movie\")"
+    "writer(ratings, \"rating_by_movie\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JOINS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -521,24 +679,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'aggregated_ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-3240ed2f9b39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maggregated_ratings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregisterTempTable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"average_ratings\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'aggregated_ratings' is not defined"
+     ]
+    }
+   ],
    "source": [
     "aggregated_ratings.registerTempTable(\"average_ratings\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'aggregated_ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-155fbb6f6e3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maggregated_ratings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"average_rating\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'aggregated_ratings' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "training_writer(aggregated_ratings, \"average_rating\")"
+    "writer(aggregated_ratings, \"average_rating\")"
    ]
   },
   {
