some seriously challenging spark queries

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -358,12 +358,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JOINS\n",
+    "# JOINS and Aggregations\n",
     "\n",
-    "Since we've put our movies and our ratings in tables, we can join them.  Pretty convenient."
+    "Since we've put our movies and our ratings in tables, we can join them.  Pretty convenient.  We can do various JOINs.  By default, like a RDBMS, the inner join is used, but we also can do LEFT, RIGHT, FULL.  We also have unions and subqueries.  We can perform aggregations on our results as well.  We can take the results of any query (a DataFrame) and use it as a table for future queries.  This is incredibly powerful. \n",
+    "\n",
+    "Full docs: https://spark.apache.org/docs/latest/sql-programming-guide.html#compatibility-with-apache-hive\n",
+    "\n",
+    "Try writing the following queries:\n",
+    "\n",
+    "- Calculate the average rating per movie.  Save this result set into the `average_rating` table\n",
+    "- For the 5 lowest rated movies on average, who rated it?  \n",
+    "- For the users who rated the bottom 5 movies, what were their average ratings?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We're going to want to be able to take a given tag and find all the movies for it.  This is going to be a frequently run query, so we want a dedicated table for it.  Create and save a new DataFrame to the table `movies_by_tag` that will let me query a table for a given tag and get a list of movies back.  Register the DataFrame with the SQL context as a table with the same name."
    ]
   },
   {
@@ -379,19 +432,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aggregations\n",
+    "# The challenge\n",
     "\n",
-    "Try your hand at finding the average rating for each movie from the movies table.  Take the dataframe and save it to the `average_rating` table.  "
+    "We're going to need to be able to show movies in a given tag ordered by their rank in our system.  For example, I should be able to ask Cassandra for the top 20 Adventure movies.\n",
+    "\n",
+    "Create a new table in Cassandra and the spark code to fill it.  You may use any DataFrame already created as well as any table."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
