added pandas challenge

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -467,6 +467,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "I want to see which tags are used the most, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame.  Pandas has a convenient call, `plot()` to display charts.\n",
+    "\n",
+    "http://pandas.pydata.org/pandas-docs/stable/visualization.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
