solutions for tag counts graph

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -472,7 +472,7 @@
     "collapsed": true
    },
    "source": [
-    "I want to see which tags are used the most, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame.  Pandas has a convenient call, `plot()` to display charts.\n",
+    "I want to see which tags are used the most, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame using `toPandas()`.  Pandas has a convenient call, `plot()` to display charts.\n",
     "\n",
     "http://pandas.pydata.org/pandas-docs/stable/visualization.html"
    ]
