--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -896,6 +896,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_tags = movies.select(explode(movies.tags).alias(\"tag\")).\\\n",
+    "                  groupBy(\"tag\").count().\\\n",
+    "                  orderBy(\"count\", ascending=False).limit(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tags = top_tags.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Drama</th>\n",
+       "      <td>5339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>3703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thriller</th>\n",
+       "      <td>1706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance</th>\n",
+       "      <td>1685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Action</th>\n",
+       "      <td>1473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Crime</th>\n",
+       "      <td>1118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adventure</th>\n",
+       "      <td>1025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Horror</th>\n",
+       "      <td>1013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sci-Fi</th>\n",
+       "      <td>754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fantasy</th>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           count\n",
+       "tag             \n",
+       "Drama       5339\n",
+       "Comedy      3703\n",
+       "Thriller    1706\n",
+       "Romance     1685\n",
+       "Action      1473\n",
+       "Crime       1118\n",
+       "Adventure   1025\n",
+       "Horror      1013\n",
+       "Sci-Fi       754\n",
+       "Fantasy      543"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags.set_index(\"tag\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x109217150>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAE4CAYAAAC+B4P0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xu4XVV97vHvG5CScKdoBEwI2iBEi2LUoIhu1HrSowLV\nFpJqmgpekCq2ak+Dx5aoHKHeKRZvVQiK2IiKgIhEZKtVayRy04gQJUAQIl4qQURD8p4/5tjZK5ud\nZIesNefaM+/nefaz5xprrjV+a19+a6wxxhxDtomIiHaa0HQAERHRO0nyEREtliQfEdFiSfIRES2W\nJB8R0WJJ8hERLTamJC9pT0kXSfqRpOWSZknaW9ISSTdLulLSnh3nnyrpFkk3SXpBR/lMSTeW+87q\nxQuKiIhhY23JnwVcbvsQ4FDgJmABsMT2QcBV5TaSZgDHAzOA2cA5klSe50PAibanA9Mlze7aK4mI\niIfYYpKXtAdwpO1PANh+0PZvgKOBReW0RcCx5fgY4ELba22vBFYAsyTtC+xme2k57/yOx0RERA+M\npSV/IHCPpHMlfV/SxyTtAky2vbqcsxqYXI73A1Z1PH4VsP8o5XeW8oiI6JEdx3jOU4DX2f6epA9Q\numaG2LakrqyP0K3niYjYntjWaOVjacmvAlbZ/l65fRFV0r9b0qMBSlfMz8v9dwJTOh7/mPIcd5bj\nzvI7NxHsw/467bTTtunx3frqhzj6IYZ+iaMfYuiXOPohhn6Jox9i6EYcm7PFJG/7buAOSQeVoucD\nPwQuBeaXsvnAxeX4EmCOpJ0kHQhMB5aW57m3zMwRMK/jMRER0QNj6a4BeD1wgaSdgJ8ArwB2ABZL\nOhFYCRwHYHu5pMXAcuBB4GQPv9WcDJwHTKSarXNFl15HRESMYkxJ3vb1wNNGuev5mzj/ncA7Rylf\nBvzp1gS4tQYGBnr59GPWD3H0QwzQH3H0QwzQH3H0QwzQH3H0QwzQ2zi0pf6cuklyv8UUEdHPJOFN\nDLyOtbsmIqLrhq+TjLHa2kZwknxENCqf3Mfu4bwpZoGyiIgWS5KPiGixJPmIiBZLko+IaLEk+YiI\nFkuSj4i+IqnnX/1q2rRpfO1rX+vqc2YKZUT0oV5Oq+zfJF8uaurqc6YlHxGxCXfccQcveclLeNSj\nHsU+++zD61//emxz+umnM23aNCZPnsz8+fO59957ARgcHGTKlCkbPUdn63zhwoUcd9xxzJ8/n913\n350nPvGJLFu2DIB58+Zx++238+IXv5jddtuN97znPV15DUnyERGjWLduHS960Ys48MADue222/jZ\nz37GnDlzOPfcc1m0aBGDg4P89Kc/5b777uN1r3vdJp9nZPfQpZdeyty5c/nNb37D0UcfveGxn/zk\nJ5k6dSqXXXYZa9as4c1vfnNXXkeSfETEKJYuXcpdd93Fu9/9biZOnMhOO+3EEUccwQUXXMCb3vQm\npk2bxi677MIZZ5zBZz7zGdavXz+m5z3yyCOZPXs2knj5y1/O9ddf39PXkSQfETGKO+64gwMOOIAJ\nEzZOk3fddRcHHHDAhttTp07lwQcfZPXq1SOfYlSTJ0/ecDxp0iQeeOCBMb9BPBxJ8hERo5gyZQq3\n334769at26h8v/32Y+XKlRtu33777ey4445MnjyZXXbZhfvvv3/DfevWreOee+4Zc529mPmTJB8R\nMYpZs2ax7777smDBAu6//34eeOABvvWtbzF37lze//73s3LlSu677z7e8pa3MGfOHCZMmMBBBx3E\nAw88wOWXX87atWs5/fTT+f3vfz/mOidPnsxPfvKTrr6OJPmI6EPq4dfYTJgwgUsvvZQVK1YwdepU\npkyZwmc/+1lOOOEE5s2bx7Of/Wwe+9jHMmnSJM4++2wA9thjD8455xxe+cpX8pjHPIZdd911o9k2\no83T77x96qmncvrpp7PXXnvxvve9b8yxbk42DYmIxvRiXnibberntblNQ9KSj4hosST5iIgWG3fL\nGnRr9DkfESNiezDuknxlWxN0/65dERHRTemuiYhosST5iIgWG6fdNRHRFv28vnsbJMlHRGMyAaL3\n0l0TEdFiSfIRES02piQvaaWkGyRdK2lpKdtb0hJJN0u6UtKeHeefKukWSTdJekFH+UxJN5b7zur+\ny4mIiE5jbckbGLB9mO2nl7IFwBLbBwFXldtImgEcD8wAZgPnaHhk5UPAibanA9Mlze7S64iIiFFs\nTXfNyCHwo4FF5XgRcGw5Pga40PZa2yuBFcAsSfsCu9leWs47v+MxERHRA1vTkv+qpGskvaqUTbY9\ntBXKamBou5P9gFUdj10F7D9K+Z2lPCIiemSsUyiPsH2XpEcCSyTd1HmnbUvKXKiIiD4zpiRv+67y\n/R5JXwCeDqyW9Gjbd5eumJ+X0+8EpnQ8/DFULfg7y3Fn+Z2j1bdw4cINxwMDAwwMDIwlzIiI7cLg\n4CCDg4NjOneLm4ZImgTsYHuNpF2AK4G3Ac8Hfmn7XyUtAPa0vaAMvH6a6o1gf+CrwJ+U1v53gVOA\npcCXgH+zfcWI+ja7aUg1hrvtC5TlIoyIaIvNbRoylpb8ZOALZYLMjsAFtq+UdA2wWNKJwErgOADb\nyyUtBpYDDwInd2Ttk4HzgInA5SMTfEREdNe42/4vLfmIiI1l+7+IiO1UknxERIslyUdEtFiSfERE\niyXJR0S0WJJ8RESLJclHRLRYknxERIslyUdEtFiSfEREiyXJR0S0WJJ8RESLJclHRLRYknxERIsl\nyUdEtFiSfEREiyXJR0S0WJJ8RESLJclHRLRYknxERIslyUdEtFiSfEREiyXJR0S0WJJ8RESLJclH\nRLRYknxERIslyUdEtFiSfEREiyXJR0S02JiSvKQdJF0r6dJye29JSyTdLOlKSXt2nHuqpFsk3STp\nBR3lMyXdWO47q/svJSIiRhprS/4NwHLA5fYCYIntg4Crym0kzQCOB2YAs4FzJKk85kPAibanA9Ml\nze7OS4iIiE3ZYpKX9BjgfwP/AQwl7KOBReV4EXBsOT4GuND2WtsrgRXALEn7ArvZXlrOO7/jMRER\n0SNjacm/H/hHYH1H2WTbq8vxamByOd4PWNVx3ipg/1HK7yzlERHRQztu7k5JLwJ+bvtaSQOjnWPb\nkjzafQ/XwoULNxwPDAwwMDBq1RER26XBwUEGBwfHdK7sTednSe8E5gEPAjsDuwOfB54GDNi+u3TF\nXG37YEkLAGyfWR5/BXAacFs555BSPhd4ju2TRqnTW4iJ4aGBh0tsro6IiPFEErY12n2b7a6x/Rbb\nU2wfCMwBvmZ7HnAJML+cNh+4uBxfAsyRtJOkA4HpwFLbdwP3SppVBmLndTwmIiJ6ZLPdNaMYav6e\nCSyWdCKwEjgOwPZySYupZuI8CJzc0Sw/GTgPmAhcbvuKbQs9IiK2ZLPdNU1Id01ExNZ52N01EREx\nviXJR0S0WJJ8RESLJclHRLRYknxERIslyUdEtNjWzpMPhqZxbrtM44yIXkuSf9i2fa5+RESvpbsm\nIqLFkuQjIlosST4iosWS5CMiWixJPiKixZLkIyJaLEk+IqLFkuQjIlosST4iosWS5CMiWixJPiKi\nxZLkIyJaLEk+IqLFkuQjIlosST4iosWS5CMiWixJPiKixZLkIyJaLEk+IqLFkuQjIlpss0le0s6S\nvivpOknLJZ1RyveWtETSzZKulLRnx2NOlXSLpJskvaCjfKakG8t9Z/XuJUVExJDNJnnbDwBH2X4y\ncChwlKRnAQuAJbYPAq4qt5E0AzgemAHMBs6RpPJ0HwJOtD0dmC5pdi9eUEREDNtid43t+8vhTsAO\nwK+Bo4FFpXwRcGw5Pga40PZa2yuBFcAsSfsCu9leWs47v+MxERHRI1tM8pImSLoOWA1cbfuHwGTb\nq8spq4HJ5Xg/YFXHw1cB+49Sfmcpj4iIHtpxSyfYXg88WdIewFckHTXifktyN4NauHDhhuOBgQEG\nBga6+fQREePa4OAgg4ODYzpX9tjzs6R/Bn4HvBIYsH136Yq52vbBkhYA2D6znH8FcBpwWznnkFI+\nF3iO7ZNGqcObi6nq4t/W9xSxNa+7H2OIiBgiCdsa7b4tza7ZZ2jmjKSJwJ8B1wKXAPPLafOBi8vx\nJcAcSTtJOhCYDiy1fTdwr6RZZSB2XsdjIiKiR7bUXbMvsEjSBKo3hE/avkrStcBiSScCK4HjAGwv\nl7QYWA48CJzc0Sw/GTgPmAhcbvuKbr+YiIjY2FZ119Qh3TUREVvnYXfXRETE+JYkHxHRYknyEREt\nliQfEdFiSfIRES2WJB8R0WJJ8hERLZYkHxHRYknyEREtliQfEdFiSfIRES2WJB8R0WJJ8hERLZYk\nHxHRYknyEREtliQfEdFiSfIRES2WJB8R0WJJ8hERLZYkHxHRYknyEREtliQfEdFiSfIRES2WJB8R\n0WJJ8hERLZYkHxHRYknyEREtliQfEdFiW0zykqZIulrSDyX9QNIppXxvSUsk3SzpSkl7djzmVEm3\nSLpJ0gs6ymdKurHcd1ZvXlJERAwZS0t+LfAPtp8AHA78naRDgAXAEtsHAVeV20iaARwPzABmA+dI\nUnmuDwEn2p4OTJc0u6uvJiIiNrLFJG/7btvXleP7gB8B+wNHA4vKaYuAY8vxMcCFttfaXgmsAGZJ\n2hfYzfbSct75HY+JiIge2Ko+eUnTgMOA7wKTba8ud60GJpfj/YBVHQ9bRfWmMLL8zlIeERE9suNY\nT5S0K/A54A221wz3wIBtS3K3glq4cOGG44GBAQYGBrr11BER497g4CCDg4NjOlf2lnOzpEcAlwFf\ntv2BUnYTMGD77tIVc7XtgyUtALB9ZjnvCuA04LZyziGlfC7wHNsnjajLm4upenPZ1vcTMZbX3c8x\nREQMkYRtjXbfWGbXCPg4sHwowReXAPPL8Xzg4o7yOZJ2knQgMB1Yavtu4F5Js8pzzut4TERE9MAW\nW/KSngV8A7iB4ebrqcBSYDEwFVgJHGf7f8pj3gKcADxI1b3zlVI+EzgPmAhcbvuUUepLSz4iYits\nriU/pu6aOiXJR0RsnW3qromIiPErST4iosWS5CMiWixJPiKixZLkIyJaLEk+IqLFxrysQfSfzqUl\ntkWmcka0V5L8uLft8/W36dF5o4noa0ny0QXNvtFExKalTz4iosWS5CMiWixJPiKixZLkIyJaLEk+\nIqLFkuQjIlosUyijFTJfP2J0SfLRIpmvHzFSumsiIlosST4iosWS5CMiWixJPiKixZLkIyJaLEk+\nIqLFkuQjIlosST4iosWS5CMiWixJPiKixZLkIyJabItJXtInJK2WdGNH2d6Slki6WdKVkvbsuO9U\nSbdIuknSCzrKZ0q6sdx3VvdfSkSzJHXlK6KbxtKSPxeYPaJsAbDE9kHAVeU2kmYAxwMzymPO0fBf\n7YeAE21PB6ZLGvmcES3gbfyK6K4tJnnb3wR+PaL4aGBROV4EHFuOjwEutL3W9kpgBTBL0r7AbraX\nlvPO73hMRET0yMPtk59se3U5Xg1MLsf7Aas6zlsF7D9K+Z2lPCIiemib15O3bUld/Zy5cOHCDccD\nAwMMDAx08+kjWq0fNlDphxjabHBwkMHBwTGdq7H8ECVNAy61/afl9k3AgO27S1fM1bYPlrQAwPaZ\n5bwrgNOA28o5h5TyucBzbJ80Sl3eXEzVH8+2bw6x7X/AzcbQL3H0Qwz9Ekc/xNAvcfRDDNsTSdge\n9Z314XbXXALML8fzgYs7yudI2knSgcB0YKntu4F7Jc0qA7HzOh4TERE9ssXuGkkXAs8B9pF0B/Av\nwJnAYkknAiuB4wBsL5e0GFgOPAic3NEsPxk4D5gIXG77iu6+lIiIGGlM3TV1SnfN+IqjH2Lolzj6\nIYZ+iaMfYtie9KK7JiIixoEk+YiIFkuSj4hosST5iIgWS5KPiGixbb7iNSKiX3XjytvxPsMnST4i\nWm5bkvT4X/o53TURES2WJB8R0WJJ8hERLZYkHxHRYknyEREtltk1ERE91PQGKknyERE9t+0rcj5c\n6a6JiGixJPmIiBZLko+IaLEk+YiIFkuSj4hosST5iIgWS5KPiGixJPmIiBZLko+IaLEk+YiIFkuS\nj4hosST5iIgWS5KPiGixJPmIiBarPclLmi3pJkm3SPqnuuuPiNie1JrkJe0AfBCYDcwA5ko6pLu1\nDHb36R62waYDoD9igP6IY7DpAIrBpgOgP2KA/ohjsOkAisGePXPdLfmnAytsr7S9FvgMcEx3qxjs\n7tM9bINNB0B/xAD9Ecdg0wEUg00HQH/EAP0Rx2DTARSDPXvmupP8/sAdHbdXlbKIiOiBupP8tu6B\nFRERW0EPd3PYh1WZdDiw0PbscvtUYL3tf+04J28EERFbyfaoG8HWneR3BH4MPA/4GbAUmGv7R7UF\nERGxHdmxzspsPyjpdcBXgB2AjyfBR0T0Tq0t+YiIqFeueI2IaLFxn+QlHSTpIkk/knRr+fpp03HV\nTdIEScc1HQdsiGWepH8pt6dKenrTcTVJ0qSmY2iSpB0k/UOD9R9Svs+U9JSRXw3E88e11TXeu2sk\nfQs4DXgf8GLgFcAOtv+55jhOAT5p+9d11jsihmW2ZzZVf0ccHwbWA8+1fbCkvYErbT+1xhh2Bl4K\nTGN47Mm2315XDCWOZwL/Aexme4qkJwOvtn1yzXFMAqbY/nGd9Y6I4Xu2n9ZQ3R+z/SpJg4wyldv2\nUTXHcwtwHXAu8GX3MBGP+5Y8MNH2V6nesG6zvRB4YQNxTAa+J2lxWZ9n1OlMPbZE0pslTZG099BX\nA3HMKknsdwC2fwU8ouYYvggcDawF7itfv605BoAPUC3j8QsA29cBz6kzAElHA9dSTXhA0mGSLqkz\nhuK/JH1Q0pENtKKvALA9ALzU9lGdXzXF0OnxwMeAvwFWSDpD0kG9qKgNLflvA0cCFwFXUU3NPMP2\n4xuIZQLwAuBvgacCi6lmEP2kpvpXMnor5cA66u+I47vAM4FrbB8m6ZFULfnDaozhB7afWFd9m4lj\nqe2nS7p26PVLut72k2qM4fvAc4GrO2Ko/efTZCt6xM//+7Zr76LZFEnPBT4F7ELVuj/V9re79fy1\nTqHskb8HJgGnAO8AdgfmNxGI7fWS7gZWA+uAvYCLJH3V9j/WUP+0XtcxRmcDXwAeJemdwF8Cb605\nhm9LOtT2DTXXO9Ltko4AkLQT1d9p3dOG19r+nxEfLtfXHMNQK7ofNPEpe+MApH2Al1G15FcDrwMu\nBZ5E1WCd1q26xn2St720HK6hakE3QtIbqH5hv6Tqg32z7bWldX8L0PMkL2kX4I3A1NL/OB14vO3L\nel13J9ufkrSM6qI3gGMauB7iSOAVkm4Ffj8cmg+tOY7XAmdRrdF0J3Al8Hc1x/BDSS8Ddix/E6cA\nXWspjpWkPanGz55digaBt9v+TQ3VTyxdQxpxbADb368hhk7fpmq9H2N7VUf5NWVMq2va0F3zNOAt\nPHSArdZ/ZklvAz5h+7ZR7pthe3kNMSwGlgF/Y/sJJel/u86ugRLH4cBy2/eW27sDh9j+bo0xTCuH\nQ3/gArC9sq4Y+kUZdH0rVVciVH3z77D9QM1xfB64EVhE9fuYBxxq+yU11D3Ixn8LGyW+BgZeNTTY\nWhqCuw79v3S9rhYk+ZuBNwM/oOMjaF3/zB0Dmw/5wylx/KqOOEosy2zPbLL/t9R5HXBYxx/xDpT+\n+ZrjeDJVi97AN21fX2f9JYbHAq/noY2Qo2uqf0dgSUODiyNjecjfYhN/n/1A0qeBk6i6db8H7AGc\nZftd3a5r3HfXAPfYbmKmwJDvUyURAVOBoSmUewG3AXUOev5e0sShG5Iex3BXRa06p4TZXlcSfW1K\n99mrgM9T/W4+VabR/VudcQAXU3XfXcpwI6S2llVZSmS9pD1t/09d9W7C7yQdafubAJKeBdzfVDCS\nPmr71Q1V/wTb95ZutC8DC6hySZL8KN4m6ePAV4E/lDLb/nwdlQ8Ndkr6GPAF25eX238O/EUdMXRY\nSDVV7DGlpXAEzYxT3FquG/gQVYJ9LVD3BWqvpJrK+VsASWcC/w3UneQfaOCNZaTfAjdKWsLwNFLb\nPqXmOE4Czpe0R7n9axqaJFE0Mme/2FHSI4BjgX8v43c9efNvQ5KfTzXndEc2njFQS5Lv8Azbrxq6\nYfvLkt5dZwC2ryzT5Q4vRafY/kWdMRQnUSXToRk1VwFNtJjWb+K4TmdLWkjVD77hU1XNA32f56H/\nD7X205ZPci+3fehQkq9pwHVzft5g3R8BVgI3AN8oY0g9+Xm0oU/+x8DBvbxibIxxXAl8g2rEXMBf\nA8+2/b9qqHsmG//TDk0Ra2rmQOMkvZHqU8xQd82xwHm2319zHGdSDTCuYOMxo8b7yOsm6b+pGkPj\nO+n0QLl4cgfbD3b9ucf7z1vSucB7bP+w4Tj+mGp62JGl6BvA2+oYeN3URSZDGpg58Ciq/vBpbDzY\neELNccwEnsXwwOu1ddZfYvgJ1cyiP2zx5N7FcOsoxbb92Jrj+DCwH/BZhvvia+lalXSW7TdIunSU\nu2sbCB8R04uAGcBEhhtkXV92ow3dNc8Armt6PrTtXwKnSNplqB+4xroH6qxvDL5I9Sa3hJoHGyXt\nXga09gZupfpIDGBJe9c526m4kWoQfnXN9Xbq7HvemeritNoWyOrwR1TXkTx3RHkdXavnl+/vHeW+\n2lu6kj5CldyfS7W8wXFAT6YYt6ElP2208rrnQ+uhC1E9CXiNa1iIStJL2XxLvtbxCUnX2X5ynXV2\n1P0l2y/soyUevg4cSjVNrrMRUnvLsVPdl/aXPvl32X5TXXVuIo5dgd/ZXtcR1851N8wk3Wj7TyXd\nUMYpdgWusP2sbtc17lvyQ8m8dBHs3GAoQwtRfRHA9vWS6lqI6sVsvjVS9yD0ZZJeaPtLNdeL7ReW\n79PqrnsTTms6gBFjNhOo1lWqdUprmUZ7ROdFQA25iupK7PvK7UlUg+LPrDmO35Xv90van+oTzqN7\nUdG4T/KqVth7L1Vf38+BA6jWBnlC3bHYvn3E+iBdH0TZRL1/W0c9W+HvgbdI+gPVKpBQtV53rysA\nSVfZft6WynrN9mCd9W3CexlO8g9SdWE1sffAdcAXJdXeJ9/hj2wPJXhsr1Eza/1fJmkv4N1UV6lD\n1W3TdeM+yQOnU/XLL3G14uFRVLMZ6tbYQlSSXu5qvZg3MXxh1obvtt9XRxxDbO9aZ32dysVgk4BH\nauNllnenWj+mrji+ZfsISffx0E9Ztb7hASfY3ug6BUm1dlsVOwO/opk++SG/lTTT9jIASU9luFVd\np3eVZSU+J+lLVD+bniwz0YYkv9b2L1TtRrSD7aslndVAHE0uRLVL+d5Ych2ptFKm09GFZvsbNVT9\nGuANVJ/slnWUrwE+WEP9ANg+onzvh9/JRcDI/veLgFo3mOmTT5x/DyyWdFe5/WhgTgNxfJvyOynJ\n/oFyjUvXx0nakOR/LWk34JvABZJ+znB/W21s30M1N752tj9SBpDW1N1qH42kV1F9kplCtVnF4cB3\neGgLrutsfwD4gKTX2z671/VtTlk35ge2D26o/kOopujtKeklDH/C250Gxq8kTaG6SG5ocPEbwBu8\n8SqMvar76cAdtr9Xfi6vBl5C1R9f29XYkvalaoBM0sYrYe5O9Qm069qQ5I+h+pjzD1TrM+8OvK3u\nIJpeiKoMbM2l2gaxaW+gmrb3HdtHSToYOKPmGCxpL5ftGMsni7m2z6ktgGrdmB9LOsCjrE5ag4Oo\nBuX3KN+HrKG6jqFu5wIXMDwe8LJS9mc11P0Rhpe+Phz4v1RruB8GfJRqWmkdhjYV2p+Np3OuoVpN\nt+vG9RTKPlth7waqKZSdq2Ha9tdrjOH9VNvs/ScdW93VfcWrpGtsP1XVapSH235A0nLbM2qMYbQV\nD2uf2inpm1SJZCkbrxtT2xRKSc90F3ca2oY4GluFsrMeSf9OtbDhwjpjGBHPX9q+qI66xnVL3v21\nwl4/LER1GNVHv5FXzdX9JnhHaTlfTLXv7K8ZviipLhMkTbC9HjbMh65tn1lVm3NMplq/p3PK1ZHA\nXaM+qHdWSPq/NHwFMvBLSfOAT1P9TOZQ9r6twQ6SHmF7LfB8Nl5LqYk8eJmqFSinUU1nHZokkSte\nR9EvK+w1vhBVv1z5anto9c2FZcmF3SkbKdfoK8BnypWFohqQrTOGD1Dt1bnR9oOSfgX8P6pPfXVp\n7ArkEU6g2hpyqEvx28Araqr7QuDrkn5BNX1zaLnj6UATDcQvlnqX0aNZNUPGdXcNgKS/HaXYthfV\nHEfjC1FJ2hl4KTW0DsYQy15UA687dsRR2xteabm/mqof1lSr/e1bxxXIpf5rbD91E/fVuol2k1cg\n9xNJz6CaTXOlh5egPohqV6a6uzRr+xsY9y152+eVq11dZrg05a+AA93gQlTU2DrYHEnvoBpc+ikb\nL/Fb2xteGYj+LvA4qt/NI4HP1VU/sOdm7qt7ZktjVyADSOqc5TR0/caG23V96rb9nVHKbq6j7lHU\nttH8uE3yqi4tPY1qhHyHUrYOONt27bNr6I+FqPZ3DUsbj8HxwOOaeMOT9HhgbonhHqoVD9VAV9Y1\nkl5t+6Mj4nsVG8/fr0PTVyAvYzi5vw34F0Ysh70dqm2j+XHbXaNqvfA/B15t+9ZS9ljgw1QL/dQ6\nlbAfFqKS9FHgg3W0DrYQxxeAk2zX/oYnaT1wGfA627eXsltd/8Jkjwa+QLVb2VBSn0m1EuNf2K57\n8LUvqGP/4e2ZalxYcTwn+euAPxvZRSPpkVTTKuueKjdQDjfaEb6OKZSSfkjVLbID1VWmjS67LOlp\nVF1HP6DmNzxJx1K15GdRDbR+Fvi4G1iwrHzaPAp4ItXfxQ9tf62BOCZQzUk/0PbbJU0FHm17aQOx\nJMl30IiFFYcaJl2tYxwn+U0OXNQ9sNVR76OpLgIysNR2LduLlSmKT2bjvs4NetE62EI8P6La37XJ\nawZ2pbpQbi5Voj2fag/eK+uKoV+o2qxjPfBc2weXNX2u3NTAcI9jSZJn0wsr2u76worjtk+e4b7F\nrb2vJyQPcd7EAAAE1klEQVQdR7Wi3FAi+6Ckf7T92RqqX9nQFZWbcl/T1wy4WmnwAqqlLvamuqJx\nAdWaQtubWa4W77sWwPavVG0iXQttvEjbRElrOu6uc2ygn9S2sOJ4bsmvY3i50pEm2q71Daxc8fr8\nodZ76Ta6qo6uEkmrqOYej9aSdwPjE++j6qa5hOY2r46izDJ6JnBNSSiPpGrJb/ct6qZIWmZ7pqTr\ngaeU2WA39CJfjNuWvO1aNz0YA1HN5hjySzbRfdIDOwC71VTXWDyFquV2+Ijyxpef2E6dTTUI/ChJ\n76T6VPPWZkPa7tW2sOK4bcn3G0nvBp7E8CXbxwM32P4/NdSdfs7YrLLy4tACXVfZrmWvg9iYpKmu\nNhfahepalqFB8d2BC1ztFd3dOpPkt83QGiW2/0vVXqtHlLv+B/i07RU1xNBXSV7SnlTXMDy7FA0C\nb7f9m8aC2o6Vi5EudB8sUra96/xflfQ52y/tdZ0Tel3BduADwL0Atj9n+42230i1ONf7a4rh+TXV\nM1afoPqZ/BXVsrJrqJaUjWYsA94q6aeS3qNqN6Ro3mPrqCQt+W3UT2uU9Isml5SNTZP0x1QbZcwF\nptr+k4ZD2u6MaMnX8gl83A689pF+WqOkX/xO0pG2h1b6exabngkV9fkT4GCqOdnLG45le3VoxxTS\nWqaTJslvu35ao6RfnAScL2mPcvvXwPwG49muSXoX8BdUC8Z9BniHm99/YbvUxKzAdNdso6xRsmkl\nyZuqT/442//ZcEjbJUmvAT5nu64NOqKPJMl3Qb+sUdK0spTAa6iW9/0B1WJxx1BtkrGizsXaAiTN\nZHj1x4f8o+fitO1Dknx0jaTPU82q+Q7VhsVTqOYCn2L7uiZj2x6VXbkMTKT6dDm0OumhVFe/PqOh\n0KJGSfLRNZ2XZZedme4CDrD9u2Yj276VN9/TbN9Ybj8ReFsdc7SjeZknH920bujA9jrgziT4vnDw\nUIIHsP0D4JAG44kapSUfXTPKonETgaEkv72uNtg4SZ+hWhflU1T9839Nta/p3EYDi1okyUe0nKSJ\nwGuptpwD+D7VBiInNBdV1CXdNREtV7rMBoGfUK0Q+jzg2iZjivrkYqiIluqjTc2jQemuiWipftnU\nPJqV7pqI9noJ1cD3NyR9WNLzqG8jm+gTaclHtFw2Nd++JclHbEc6NjWfY/u5TccTvZckHxHRYumT\nj4hosST5iIgWS5KPiGixJPmIQtIekl7bdBwR3ZQkHzFsL+DkpoOI6KYsaxAx7EzgcZKuBa6m2lxj\nL+ARwFttXwIg6Z+Bl1EtFXAHsMz2e5sJOWLzkuQjhv0T8ATbh5VNTybZXiNpH6rdri6R9DSqK0kP\nBXaiWtHxmsYijtiCJPmIYZ2X/E8AzpB0JLAe2E/SZOAI4GLbfwD+IOlSslRA9LEk+YjRvQzYB3iK\n7XWSbgV2Znhj7CFJ8NHXMvAaMWwNsFs53gP4eUnwRwEHUCX4bwEvlvRHZU2YF5byiL6UlnxEYfuX\nkr4l6Ubge8DBkm6g6nP/UTnnGkmXADcAq4Ebgd80FXPElmTtmoitJGkX27+VNAn4OvAq29c1HVfE\naNKSj9h6H5U0g6qP/rwk+OhnaclHRLRYBl4jIlosST4iosWS5CMiWixJPiKixZLkIyJa7P8DGhWi\nZHMMelkAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x109286610>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tags.set_index(\"tag\").plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
