tags and clarification

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -474,7 +474,14 @@
    "source": [
     "I want to see which tags are used the most, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame using `toPandas()`.  Pandas has a convenient call, `plot()` to display charts.\n",
     "\n",
-    "http://pandas.pydata.org/pandas-docs/stable/visualization.html"
+    "For example:\n",
+    "```\n",
+    "pd = my_dataframe.toPandas()\n",
+    "pd.set_index('x_axis_name').plot(kind='bar')\n",
+    "```\n",
+    "http://pandas.pydata.org/pandas-docs/stable/visualization.html\n",
+    "\n",
+    "Note the `set_index()` call - you'll want it to make sure you have the correct label.  See http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.set_index.html"
    ]
   },
   {
