--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -895,6 +895,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas and Matplotlib"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
